--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   },
   "homepage": "https://github.com/JhonyCarvajal/PruebaTecnica_Back#readme",
   "dependencies": {
+    "axios": "^0.25.0",
     "body-parser": "^1.19.1",
+    "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "form-data": "^4.0.0",
     "multer": "^1.4.4",
     "sharp": "^0.30.0"
   }
