Ajustando EL back para autenticacion, y generacion de JWT

--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
 PORT=8030
 
+
+MYSQL_BD=bdPruebaTecnica
+USER=adminUser
+PASS=k0_YY2dWBwoh_n.A
+PORT_BD=3306
+
+
+SECRETORPRIVATEKEY=PruebaTecnica2022
+
+
 CLOUDINARY_URL=cloudinary://439443998828792:wuLAlm9qL4gRtX8gKhpqXRJSrp0@dvemhefxt
