--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/JhonyCarvajal/PruebaTecnica_Back#readme",
   "dependencies": {
     "axios": "^0.25.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
@@ -25,7 +26,10 @@
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "form-data": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.16.0",
     "sharp": "^0.30.0"
   }
 }
